--- a/subular-mobile/app/views/subular-app/album/album.component.css
+++ b/subular-mobile/app/views/subular-app/album/album.component.css
@@ -1,5 +1,5 @@
 .album {
-
+	height: 100%;
 }
 .album-name{
 	text-align: center;
